2013-04-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/Makefile.in (gnuplot.info): Fix out-of-tree build (would
	break make distcheck, too).

2013-04-12  Tag Release_4_6_3

2013-04-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/stats.c:  Fix incorrect emory allocation for large matrices.

2013-04-11  Ethan A Merritt  <merritt@u.washington.edu>

	* Bump patchlevel to 3 so that we don't have a version mismatch
	between the linux and windows packages being distributed.

2013-04-10  Ethan A Merritt  <merritt@u.washington.edu>

	* term/pslatex.trm (EPSLATEX_set_color):  Revert a portion of the patch
	from 2013-01-08 (Tracker #1199).  Repairs overzealous removal of redundant
	color commands.  Bug #1185.

2013-04-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes)
	src/plot2d.c (refresh_bounds):  When refreshing images plots we must 
	recheck range limits on both x and y.

2013-04-07  Bastian Maerkisch  <bmaerkisch@web.de>

	Backports from 4.7 relevant for the Windows platform:

	* src/win/wgraph.c src/win/winmain.c|h (WinMessageLoop) src/win/wtext.c:
	Move Windows message handling from TextMessage() to new WinMessageLoop()
	and make it accessible in Windows console mode.

	* src/win/wtext.h (getchar): Make sure that getchar is defined.

	* src/win/wcommon.h src/win/wtext.c (TextShow) src/win/winmain.h
	src/win/winmain.c (WinWindowOpened, WinPersistTextClose)
	src/win/wgraph.c (WndGraphProc) src/wxterminal/wx_term.h
	src/wxterminal/wxt_gui.h src/wxterminal/wxt_gui.cpp (~wxtFrame, 
	wxtFrame::onClose, wxt_window_opened, wxt_atexit) src/plot.c (main)
	Revise handling of persist mode on Windows: Exit wgnuplot only after the
	last plot window (wxt or win) has been closed. The text window is only
	shown if "-" is given on the command line. No zombie wgnuplot process
	when closing a persistent wxt terminal window. Console gnuplot behaviour
	stays unchanged.
	Bug #3538762
